# GenAI

crewAI/: pyproject.toml
crewAI/app/: basics_01.py  basics_02.py  basics_03.py
langGraph/: pyproject.toml
langGraph/app/: agent.py
multiTenancy/: pyproject.toml
multiTenancy/app/: multi_tenancy_101.ipynb
