[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Rizwan ud din <134915933+Rizwanuddindev@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
qdrant-client = "^1.8.2"
langchain = "^0.1.14"
langchain-openai = "^0.1.1"
python-dotenv = "^1.0.1"
datasets = "^2.18.0"
pandas = "^2.2.1"
ipykernel = "^6.29.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
